--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,9 +51,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 
-    //Firebase
+    // Firebase
     implementation platform('com.google.firebase:firebase-bom:31.3.0')
-//    implementation 'com.google.firebase:firebase-analytics-ktx'
+    // implementation 'com.google.firebase:firebase-analytics-ktx
     implementation 'com.google.firebase:firebase-ml-vision:23.0.0'
 
     // image cropper
@@ -61,5 +61,8 @@ dependencies {
     implementation "io.coil-kt:coil:0.13.0"
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
+    //static circle image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
